--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
   "keywords": [
     "CSS",
     "Tailwind",
-    "Scrollbar"
+    "Scrollbar",
+    "tailwind plugin"
   ],
   "license": "MIT"
 }
